--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+puppet-module-puppetlabs-ntp (4.2.0-2~bpo8+0calibre1) calibre9; urgency=low
+
+  * New upstream release for Calibre9
+
+ -- Cecile Yoshikawa <cecile.yoshikawa@edf.fr>  Fri, 12 Aug 2016 09:39:44 +0100
+
 puppet-module-puppetlabs-ntp (4.2.0-2) unstable; urgency=medium
 
   * Update dependencies for puppet 4
