--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+puppet-module-puppetlabs-ntp (4.2.0-2sci8u1) scibian8; urgency=medium
+
+  * Scibian8 rebuild.
+
+ -- Thomas Hamel <thomas-externe.hamel@edf.fr>  Wed, 13 Dec 2017 15:12:18 +0100
+
 puppet-module-puppetlabs-ntp (4.2.0-2~bpo8+0calibre1) calibre9; urgency=low
 
   * New upstream release for Calibre9
