--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+puppet-module-puppetlabs-ntp (6.0.0-2sci8u1) scibian8; urgency=medium
+
+  * New upstream release for Scibian8.
+
+ -- Benoit Boccard <benoit-externe.boccard@edf.fr>  Mon, 11 Feb 2019 15:22:14 +0100
+
 puppet-module-puppetlabs-ntp (6.0.0-2) unstable; urgency=medium
 
   * Also install the new data and types directories and hiera.yaml.
