--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+puppet-module-puppetlabs-ntp (6.0.0-2sci8u2) scibian8; urgency=medium
+
+  * Correct copyright file (dep5)
+  * install the new data and types directories and hiera.yaml 
+
+ -- Benoit Boccard <benoit-externe.boccard@edf.fr>  Mon, 11 Feb 2019 16:59:55 +0100
+
 puppet-module-puppetlabs-ntp (6.0.0-2sci8u1) scibian8; urgency=medium
 
   * New upstream release for Scibian8.
