--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+puppet-module-puppetlabs-ntp (6.0.0-2sci8u3) scibian8; urgency=medium
+
+  * Change dependancies to : puppet4 | puppet-common (>= 3) 
+
+ -- Benoit Boccard <benoit-externe.boccard@edf.fr>  Wed, 13 Feb 2019 10:53:55 +0100
+
 puppet-module-puppetlabs-ntp (6.0.0-2sci8u2) scibian8; urgency=medium
 
   * Correct copyright file (dep5)
